--- a/public/css/_colors.scss
+++ b/public/css/_colors.scss
@@ -13,7 +13,7 @@ $red: #9A4645;
 
 
 
-//new Color scheme blue and white and black
+/*new Color scheme blue and white and black*/
 	$blue:#1EAAF1;
 		$alt-blue:rgb(39, 66, 136);
 		$op-blue:rgba(#1eaaf1, 0.37);
