--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -9,6 +9,7 @@
 @import "_contact.scss";
 @import "_proj.scss";
 @import "_about.scss";
+@import "animate.css";
 //fontbox
 //font-family: 'Roboto Condensed', sans-serif
 //font-family: 'Open Sans Condensed', sans-serif
