--- a/public/html/views/proj.html
+++ b/public/html/views/proj.html
@@ -9,4 +9,23 @@
       </article>
     </section>
   </div>
+  <div class="card">
+    <section class="body"><img class="vert vert2 wow fadeInLeft" src="./img/hipster-3.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.85s"/><img class="hor hor1 wow fadeInLeft" src="./img/hipster-2.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.65s"/><img class="vert vert1 wow fadeInLeft" src="./img/hipster-1.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.45s"/>
+      <article class="wow fadeIn" data-wow-duration="1s">
+        <h4>KomBucha.co</h4>
+        <p>Kombucha retro actually, locavore sriracha franzen chia gentrify shabby chic drinking vinegar mustache quinoa twee pabst.</p>
+        <p>Letterpress helvetica man braid, hammock waistcoat slow-carb forage tofu</p>
+      </article>
+    </section>
+  </div>
+  <div class="card">
+    <section class="body"><img class="vert vert2 wow fadeInLeft" src="./img/beard-2.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.85s"/><img class="hor hor1 wow fadeInLeft" src="./img/beard-1.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.65s"/><img class="vert vert1 wow fadeInLeft" src="./img/beard-3.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.45s"/>
+      <article class="wow fadeIn" data-wow-duration="1s">
+        <h4>Mustach.io</h4>
+        <p>Dolor sit amet clive dunn karl marx bad guy walrus.</p>
+        <p>Leader of men fox hunting chevron. Hair trimmer hungarian timothy dalton quis handsome, hair trimmer quis brandy hungarian.</p>
+        <p>Socially mobile gentleman timothy dalton handsome saddam hussein face broom.</p>
+      </article>
+    </section>
+  </div>
 </div>
