--- a/public/html/views/proj.pug
+++ b/public/html/views/proj.pug
@@ -8,3 +8,22 @@
 				h4 bNural
 				p Is a site that I built for my no-server project at DevMountain.
 				p It allows the user to generate Binaural beats to control their mood.
+	.card
+		section.body
+			img(src="./img/hipster-3.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.85s").vert.vert2.wow.fadeInLeft
+			img(src="./img/hipster-2.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.65s").hor.hor1.wow.fadeInLeft
+			img(src="./img/hipster-1.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.45s").vert.vert1.wow.fadeInLeft
+			article(data-wow-duration="1s").wow.fadeIn
+				h4 KomBucha.co
+				p Kombucha retro actually, locavore sriracha franzen chia gentrify shabby chic drinking vinegar mustache quinoa twee pabst.
+				p Letterpress helvetica man braid, hammock waistcoat slow-carb forage tofu
+	.card
+		section.body
+			img(src="./img/beard-2.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.85s").vert.vert2.wow.fadeInLeft
+			img(src="./img/beard-1.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.65s").hor.hor1.wow.fadeInLeft
+			img(src="./img/beard-3.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.45s").vert.vert1.wow.fadeInLeft
+			article(data-wow-duration="1s").wow.fadeIn
+				h4 Mustach.io
+				p Dolor sit amet clive dunn karl marx bad guy walrus.
+				p Leader of men fox hunting chevron. Hair trimmer hungarian timothy dalton quis handsome, hair trimmer quis brandy hungarian.
+				p Socially mobile gentleman timothy dalton handsome saddam hussein face broom.
