--- a/public/css/_home.css
+++ b/public/css/_home.css
@@ -1,21 +1,21 @@
 /*
-Error: Undefined variable: "$white".
-        on line 39 of _home.scss
+Error: Undefined variable: "$black".
+        on line 44 of _home.scss
 
-34: 			}
-35: 			article{
-36: 
-37: 				padding:3vh 0;
-38: 
-39: 				border-bottom: 2px $white solid;
-40: 
-41: 				p{
-42: 					font-family: 'Sintony', sans-serif;
-43: 				}
-44: 				i{
+39: 			}
+40: 			article{
+41: 
+42: 				padding:3vh 0;
+43: 
+44: 				border-bottom: 2px $black solid;
+45: 
+46: 				p{
+47: 					font-family: 'Sintony', sans-serif;
+48: 				}
+49: 				i{
 
 Backtrace:
-_home.scss:39
+_home.scss:44
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `block in _perform'
@@ -104,4 +104,4 @@ _home.scss:39
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$white\".\A         on line 39 of _home.scss\A \A 34: 			}\A 35: 			article{\A 36: \A 37: 				padding:3vh 0;\A 38: \A 39: 				border-bottom: 2px $white solid;\A 40: \A 41: 				p{\A 42: 					font-family: 'Sintony', sans-serif;\A 43: 				}\A 44: 				i{"; }
+  content: "Error: Undefined variable: \"$black\".\A         on line 44 of _home.scss\A \A 39: 			}\A 40: 			article{\A 41: \A 42: 				padding:3vh 0;\A 43: \A 44: 				border-bottom: 2px $black solid;\A 45: \A 46: 				p{\A 47: 					font-family: 'Sintony', sans-serif;\A 48: 				}\A 49: 				i{"; }
