--- a/public/css/_queries.scss
+++ b/public/css/_queries.scss
@@ -349,8 +349,12 @@
 				        flex-direction:column;
 				width:38.195vw;
 				.topSection{
+					display:-webkit-box;
+					display:-ms-flexbox;
 					display:flex;
-					align-items:center;
+					-webkit-box-align:center;
+					    -ms-flex-align:center;
+					        align-items:center;
 					header{
 						color:white;
 						background:$blue;
