--- a/public/index.pug
+++ b/public/index.pug
@@ -5,12 +5,10 @@ html(lang='en', ng-app="app")
 		meta(charset="utf-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		link(rel='stylesheet', href='./css/master.css')
-		link(href="https://fonts.googleapis.com/css?family=Bungee+Outline", rel="stylesheet")
-		link(href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Sintony:400,700|Titillium+Web", rel="stylesheet")
-		link(href="https://fonts.googleapis.com/css?family=Julius+Sans+One|VT323", rel="stylesheet")
-		link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1", crossorigin="anonymous")
-		link(rel="stylesheet", href="css/animate.css")
-		
+		link(href="https://fonts.googleapis.com/css?family=Amatic+SC|Julius+Sans+One|Open+Sans+Condensed:300|Patrick+Hand+SC|Roboto+Condensed|Sintony|Titillium+Web|Walter+Turncoat", rel="stylesheet")
+
+
+
 
 	body(ng-controller="ctrl")
 		header#mainHeader
@@ -40,20 +38,13 @@ html(lang='en', ng-app="app")
 		script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js")
 		// Ui-router Cdn
 		script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js")
-
 		// jquery Cdn
 		script(src="http://code.jquery.com/jquery-3.1.0.min.js")
-		//jquery-form-validator
-		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js")
 		// Angular files
 		script(type="text/javascript", src="./js/angular/app.js")
 		script(type="text/javascript", src="./js/angular/ctrl.js")
 		script(type="text/javascript", src="./js/angular/srvc.js")
 		// Personal etc js
-		script(type="text/javascript", src="./js/script.js")
+		script(type="text/javascript", src="./build/script.min.js")
 		//wow.js
-		script(type="text/javascript", src="./js/wow.js")
-
-
-		//- //fontAwesome
-		//- script(type="text/javascript", src="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css")
+		script(type="text/javascript", src="./build/wow.min.js")
