--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -10,6 +10,7 @@
 @import "_proj.scss";
 @import "_about.scss";
 @import "animate.css";
+@import "_secret.scss";
 //fontbox
 //font-family: 'Roboto Condensed', sans-serif
 //font-family: 'Open Sans Condensed', sans-serif
