--- a/public/html/views/secret.pug
+++ b/public/html/views/secret.pug
@@ -1,20 +1,49 @@
-h1 hey its a secret
-form
-	h1 posttext
-		textarea(ng-model="text", rows="8", cols="40")
+#secretPage
+	form
+		h1 posttext
+			textarea(ng-model="text", rows="8", cols="40")
+		h1 posttitle
+			input(type="text", ng-model="title")
+		h1 posttime
+			input(type="text", ng-model="time")
+		h1 postimgsrc
+			input(type="text", ng-model="imgSrc")
+		h1 postimgalt
+			input(type="text", ng-model="imgAlt")
+		button(type="button", name="button", ng-click="postPost(text,title,time,imgSrc,imgAlt)") SUBMIT POST
 
-	h1 posttitle
-		input(type="text", ng-model="title")
-	h1 posttime
-		input(type="text", ng-model="time")
-	h1 postimgsrc
-		input(type="text", ng-model="imgSrc")
-	h1 postimgalt
-		input(type="text", ng-model="imgAlt")
-	button(type="button", name="button", ng-click="postPost(text,title,time,imgSrc,imgAlt)") SUBMIT POST
+	form
+		h1 DELETE POST WHERE POSTID = X
+		h1 X
+			input(type="text", ng-model="del")
+		button(type="button", ng-click="delPost(del)") DELETEPOST
+	form
+		h1 RATE MESSAGE
+		h1 MESSAGE ID
+			input(type="text",ng-model="xid")
+		h1 RATING 1 - 10
+			input(type="text",ng-model="rating")
+		button(type="button", ng-click="ratePost(xid,rating)") SUBMIT
 
-form
-	h1 DELETE POST WHERE POSTID = X
-	h1 X
-		input(type="text", ng-model="del")
-	button(type="button", ng-click="delPost(del)") DELETEPOST
+	section.container
+		.message
+			table
+				tbody
+					th
+						tr
+							td ID
+							td NAME
+							td EMAIL
+							td MESSAGE
+					tr(ng-repeat="message in messages")
+						td {{message.messid}}
+						td {{message.messname}}
+						td {{message.messemail}}
+						td {{message.messmess}}
+			table
+					tr
+						td ID
+						td rating
+					tr(ng-repeat="x in ratings")
+						td {{x.postid}}
+						td {{x.rating}}
