styles for secret page

--- a/public/html/views/secret.pug
+++ b/public/html/views/secret.pug
@@ -1,29 +1,31 @@
 #secretPage
-	form
-		h1 posttext
-			textarea(ng-model="text", rows="8", cols="40")
-		h1 posttitle
-			input(type="text", ng-model="title")
-		h1 posttime
-			input(type="text", ng-model="time")
-		h1 postimgsrc
-			input(type="text", ng-model="imgSrc")
-		h1 postimgalt
-			input(type="text", ng-model="imgAlt")
-		button(type="button", name="button", ng-click="postPost(text,title,time,imgSrc,imgAlt)") SUBMIT POST
+	section.controls
+		form
+			h1 posttext
+				textarea(ng-model="text", rows="8", cols="40")
+			h1 posttitle
+				input(type="text", ng-model="title")
+			h1 posttime
+				input(type="text", ng-model="time")
+			h1 postimgsrc
+				input(type="text", ng-model="imgSrc")
+			h1 postimgalt
+				input(type="text", ng-model="imgAlt")
+			button(type="button", name="button", ng-click="postPost(text,title,time,imgSrc,imgAlt)") SUBMIT POST
 
-	form
-		h1 DELETE POST WHERE POSTID = X
-		h1 X
-			input(type="text", ng-model="del")
-		button(type="button", ng-click="delPost(del)") DELETEPOST
-	form
-		h1 RATE MESSAGE
-		h1 MESSAGE ID
-			input(type="text",ng-model="xid")
-		h1 RATING 1 - 10
-			input(type="text",ng-model="rating")
-		button(type="button", ng-click="ratePost(xid,rating)") SUBMIT
+		form
+			h1 DELETE POST WHERE POSTID = X
+			h1 X
+				input(type="text", ng-model="del")
+			button(type="button", ng-click="delPost(del)") DELETEPOST
+		form
+			h1 RATE MESSAGE
+			h1 MESSAGE ID
+				input(type="text",ng-model="xid")
+			h1 RATING 1 - 10
+				input(type="text",ng-model="rating")
+			button(type="button", ng-click="ratePost(xid,rating)") SUBMIT
+
 
 	section.container
 		.message
