--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1920,13 +1920,31 @@ header#mainHeader {
     margin: 0 auto;
     margin-bottom: 10vh;
     width: 80vw; }
+  #secretPage section.controls {
+    width: 80vw;
+    margin: 0 auto;
+    display: flex;
+    align-items: center; }
+    #secretPage section.controls form {
+      width: 40vw; }
+      #secretPage section.controls form h1 {
+        width: 20vw;
+        text-align: center; }
+        #secretPage section.controls form h1 textarea {
+          width: 20vw;
+          margin-top: 1vh;
+          margin-bottom: 2vh; }
+        #secretPage section.controls form h1 input {
+          width: 20vw;
+          margin-top: 1vh;
+          margin-bottom: 2vh; }
   #secretPage section.container {
     width: 80vw;
     margin: 0 auto; }
     #secretPage section.container table {
       margin-bottom: 5vh; }
       #secretPage section.container table tbody tr {
-        width: 80vw;
+        width: 35vw;
         height: 5vh; }
         #secretPage section.container table tbody tr td {
           border: 1px solid black;
